--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,13 +6,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-size: 2vmin;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  background-color: black !important;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -26,7 +21,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -34,5 +29,5 @@ a {
     color: white;
     background: black;
   }
-}
+}*/
 
