--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,8 +36,12 @@ a {
 
 .footer {
   text-align: center;
-  font-size: medium;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: auto;
+  display: grid;
+  justify-content: center;
+  font-size: 1rem;
+  align-content: center;
+  height: 5vh;
 }
 
 .hro {
@@ -56,4 +60,25 @@ a {
 
 .profile {
   padding: 5px;
+}
+
+.main-profile {
+  margin: 1rem;
+  border-radius: 1rem;
+  box-shadow: 2px 2px 4px #666;
+}
+
+
+.bg-footer {
+  border-top: 5px solid rgb(235, 235, 235);
+}
+
+.status-profile {
+  border: 1px solid black;
+  margin: 8px;
+  margin-top: auto;
+}
+
+.tak{
+  color: darkgray;
 }
