--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -130,6 +130,22 @@ a:hover {
   place-items: center;
 }
 
+.container2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.image2 {
+  margin-right: 20px;
+}
+
+.text2 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
 @media only screen and (min-width: 1280px) {
   .bulet-skills {grid-template-columns: 1fr 200px 1fr; grid-template-rows: 100px 200px;}
   .bg-skills {margin: 65px;}
