--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -130,6 +130,23 @@ a:hover {
   place-items: center;
 }
 
+.imageContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.imageContainer img {
+  border-radius: 20px;
+}
+
+.int-text {
+  text-align: center;
+  margin: 5px;
+  font-size: 27px;
+}
+
 .container2 {
   display: flex;
   flex-direction: row;
